[gd_scene load_steps=7 format=3 uid="uid://dbeojvfbhvun1"]

[ext_resource type="Texture2D" uid="uid://bnr72lovygyqk" path="res://resources/Jungle Monkey Platformer/1-Sprites/Character Spritesheets/6-Fruits/Fruit+.png" id="1_ix5g5"]
[ext_resource type="Script" path="res://scripts/manzana.gd" id="1_yxtbg"]
[ext_resource type="AudioStream" uid="uid://br58n4d1hu72v" path="res://resources/sounds/collect_apple.mp3" id="3_kyfsd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ridhh"]
atlas = ExtResource("1_ix5g5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mgljo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ridhh")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sdo8m"]
radius = 8.0

[node name="Fruta" type="Area2D"]
collision_mask = 2
script = ExtResource("1_yxtbg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mgljo")
animation = &"new_animation"
autoplay = "new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_sdo8m")

[node name="SonidoManzana" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kyfsd")
volume_db = 24.0
bus = &"Efectos de sonido"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="SonidoManzana" to="." method="_on_sonido_manzana_finished"]
